trunk/Archive2/79/46f42e7803e4b5/output
main.cpp:13:21: error: non-virtual member function marked 'override' hides virtual member function
    void add_st(L*) override {
                    ^
main.cpp:6:18: note: hidden overloaded virtual function 'K::add_st' declared here: type mismatch at 1st parameter ('K *' vs 'L *')
    virtual void add_st(K*) {
                 ^
1 error generated.
